# jira-stats-exporter

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
src/app/: app.py  cli.py  config.py  parser.py  resources.py
src/core/: cli_utils.py  date_ranges.py  utils.py
src/custom_fields/: __init__.py  client.py
src/jira/: __init__.py  client.py  config.py  custom_fields.py  jql.py  mock.py
src/teams/: __init__.py  client.py  mock.py  resources.py
src/users/: __init__.py  client.py  mock.py  resources.py
tests/: conftest.py  test_app.py  test_cli.py  test_cli_utils.py  test_closed_issues.py  test_config.py  test_custom_fields.py  test_date_ranges.py  test_issue.py  test_jql.py  test_teams.py  test_users.py  test_utils.py
