[project]
name = "dk-jira-stats-exporter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.12"
dependencies = [
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
]

[project.scripts]
cli = "app.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app", "src/jira"]
