[project]
name = "dk-jira-stats-exporter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.12"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "rich>=15.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.15",
    "ty>=0.0.42",
]

[project.scripts]
cli = "app.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app", "src/core", "src/jira", "src/teams", "src/users"]

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [
    ".git",
    ".idea",
    "__pycache__",
    "venv",
    ".venv",
    "dist",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "T10", # flake8-debugger
    "ANN",  # flake8-annotations
]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"] # unused imports
"tests/*" = ["ANN001", "ANN401"]

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
split-on-trailing-comma = true
combine-as-imports = true

[tool.ty.rules]
unresolved-import = "ignore"

[tool.ty.src]
exclude = [
    "tests",
    "venv",
    ".venv",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
